# GithubAgent

./: .gitignore  GithubAgent.py  Helper.py  README.md  pyproject.toml  requirements.txt  tools.py
prompts/: global_restrictions.txt  planner_agent.txt  synthesizer_agent.txt  worker_agent.txt
